--- a/Bluelens/Bluelens/Bluelens.vcxproj
+++ b/Bluelens/Bluelens/Bluelens.vcxproj
@@ -123,11 +123,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\credits.cpp" />
+    <ClCompile Include="src\howToPlay.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mainMenu.cpp" />
+    <ClCompile Include="src\maze.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\credits.h" />
+    <ClInclude Include="include\howToPlay.h" />
     <ClInclude Include="include\mainMenu.h" />
+    <ClInclude Include="include\maze.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
