--- a/Bluelens/Bluelens/Bluelens.vcxproj
+++ b/Bluelens/Bluelens/Bluelens.vcxproj
@@ -126,12 +126,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\button.cpp" />
     <ClCompile Include="src\howToPlay.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mainMenu.cpp" />
     <ClCompile Include="src\maze.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\button.h" />
     <ClInclude Include="include\howToPlay.h" />
     <ClInclude Include="include\mainMenu.h" />
     <ClInclude Include="include\maze.h" />
