--- a/Bluelens/Bluelens/Bluelens.vcxproj.filters
+++ b/Bluelens/Bluelens/Bluelens.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\howToPlay.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\button.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\mainMenu.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\howToPlay.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\button.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
