--- a/Bluelens/Bluelens/Bluelens.vcxproj
+++ b/Bluelens/Bluelens/Bluelens.vcxproj
@@ -128,15 +128,19 @@
   <ItemGroup>
     <ClCompile Include="src\button.cpp" />
     <ClCompile Include="src\howToPlay.cpp" />
+    <ClCompile Include="src\inputField.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mainMenu.cpp" />
     <ClCompile Include="src\maze.cpp" />
+    <ClCompile Include="src\theme.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\button.h" />
     <ClInclude Include="include\howToPlay.h" />
+    <ClInclude Include="include\InputField.h" />
     <ClInclude Include="include\mainMenu.h" />
     <ClInclude Include="include\maze.h" />
+    <ClInclude Include="include\theme.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
